--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=92400c6bc904357aff86107ea60dd3eb
 ###< symfony/framework-bundle ###
 
@@ -24,7 +24,7 @@ APP_SECRET=92400c6bc904357aff86107ea60dd3eb
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:secret@db:3306/b_pay?serverVersion=8.0&charset=utf8"
+DATABASE_URL="mysql://root:secret@db:3306/rest_api_courier_db?serverVersion=8.0&charset=utf8"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
