--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: b_pay
-      MYSQL_USER: b_pay
+      MYSQL_DATABASE: rest_api_courier_db
+      MYSQL_USER: simple_user
       MYSQL_PASSWORD: secret
   composer:
     image: composer
