--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "symfony/maker-bundle": "*"
+        "symfony/maker-bundle": "^1.48"
     },
     "config": {
         "allow-plugins": {
